=========
Changelog
=========

1.3b2 (unreleased)
==================

- Support remote host/port for MySQL commands.

- Copy virtualenv files instead of symlinking (for Python 2.7 and up).
  Symlinking breaks especially on NixOS since the symlinks point directly to
  the store.


1.3b1 (2016-03-09)
==================

- Provided extended prediction support for deployments. In addition to ``-c``
  which checks internal consistency of the configuration model you can pass
  ``-P`` which causes verification to be run and predict which changes
  will be applied when deploying.

- Enhance support for multi-line members in secret files: order them and
  indent them automatically. (#13040)

1.2 (2016-01-29)
================

- Change default of supervisor PID file path to ensure it does something
  useful out of the box.

  It's still a good idea to place it on a temporary filesystem that is wiped
  after a reboot to ensure the PID is from a current system environment.


1.2b2 (2016-01-29)
==================

- Remove the deprecated 'remote' command alias.

- Remove implicit dependency of Supervisor to Logrotation and Nagios.

  Supervisor now has the options ``logrotate`` and ``nagios`` that can
  be enabled per environment.

  **Compatibility note:** if you update from an existing setup with supervisor
  you should add this to your environments that actually use those features::

    [component:supervisor]
    logrotate = True
    nagios = True

  Otherwise environments will complain that the RotatedLogFile and
  nagios.Service have unsatisfied resource requirements. Alternatively you
  can drop the ``logrotate`` and ``nrpehost`` or ``nagiosserver`` components
  in environments where you don't need them.

1.2b1 (2016-01-28)
==================

- Add more utilities for managing secrets: get an overview of
  all environments and what user keys are there, automatically
  add or remove users to all, one, or multiple environments.

- Improve component error reporting.
